[package]
    authors = ["Eric Evans (CireSnave@gmail.com)"]
    categories = [
        "command-line-interface",
        "config",
        "development-tools",
        "no-std",
    ]
    description = "Command Line Interfaces and Configuration Management made easy"
    documentation = "https://github.com/ciresnave/applause"
    edition = "2021"
    homepage = "https://github.com/ciresnave/applause"
    keywords = ["binary", "bit", "bitfield", "bits", "byte"]
    license = "MIT"
    name = "applause"
    readme = "README.md"
    repository = "https://github.com/ciresnave/applause"
    version = "0.1.1"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    applause_derive = { version = "0.1.1", optional = true }
    inventory       = "0.3.14"
    log             = { version = "0.4.20", optional = true }

[features]
    default = ["derive", "log"]
    derive  = ["dep:applause_derive"]
    log     = ["dep:log"]
